BE/feat: workService 기초코드작업 완성

--- a/server/speechfy/build.gradle
+++ b/server/speechfy/build.gradle
@@ -43,6 +43,12 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	
+	implementation(platform("software.amazon.awssdk:bom:2.20.30"))
+	implementation("software.amazon.awssdk:s3")
+	implementation("org.springframework.boot:spring-boot-starter-web")
+
+
 }
 
 tasks.named('test') {
