--- a/server/speechfy/build.gradle
+++ b/server/speechfy/build.gradle
@@ -47,7 +47,8 @@ dependencies {
 	implementation(platform("software.amazon.awssdk:bom:2.20.30"))
 	implementation("software.amazon.awssdk:s3")
 	implementation("org.springframework.boot:spring-boot-starter-web")
-
+	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.123'
 
 }
 
