--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@magenta/music": "^1.23.1",
+    "@tanstack/react-query": "^5.69.0",
     "@tensorflow/tfjs": "^2.7.0",
     "@tensorflow/tfjs-backend-webgl": "^2.7.0",
     "@tonejs/midi": "^2.0.15",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "fft.js": "^4.0.3",
     "ndarray-resample": "^1.0.1",
