--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "fft.js": "^4.0.3",
+    "msw": "^2.7.3",
     "ndarray-resample": "^1.0.1",
     "next": "15.2.2",
     "protobufjs": "^6.8.6",
@@ -49,5 +50,10 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
