Feat: 파일 다운로드 기능 구현 - CloudFrontUrl 반환 - S3Service 테스트 파일 추가 S12P21B105-124

--- a/server/speechfy/src/main/resources/application.yml
+++ b/server/speechfy/src/main/resources/application.yml
@@ -21,6 +21,8 @@ logging:
 aws:
   s3:
     bucket-name: ${AWS_S3_BUCKET_NAME}
+  cloudfront:
+    domain: ${AWS_CLOUDFRONT_DOMAIN}
   region: ${AWS_REGION}
   access-key: ${AWS_ACCESS_KEY}
   secret-key: ${AWS_SECRET_KEY}
