--- a/server/speechfy/build.gradle
+++ b/server/speechfy/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-web")
 	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.123'
-
+	testImplementation("org.mockito:mockito-core")
+	testImplementation("org.mockito:mockito-junit-jupiter")
 }
 
 tasks.named('test') {
