--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "staffrender": "^0.2.1",
     "tonal": "^2.0.0",
     "tone": "~14.7.77",
+    "wav-encoder": "^1.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
