--- a/server/speechfy/Dockerfile
+++ b/server/speechfy/Dockerfile
@@ -14,6 +14,7 @@ RUN ./gradlew dependencies --no-daemon
 
 # 4. 프로젝트 코드 복사 및 빌드 실행
 COPY .env .env
+COPY keys keys
 COPY src src
 RUN ./gradlew build --no-daemon
 
