--- a/server/speechfy/build.gradle
+++ b/server/speechfy/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.123'
 	testImplementation("org.mockito:mockito-core")
 	testImplementation("org.mockito:mockito-junit-jupiter")
-	implementation 'io.jsonwebtoken:jjwt:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 }
 
 tasks.named('test') {
