--- a/server/speechfy/Dockerfile
+++ b/server/speechfy/Dockerfile
@@ -15,6 +15,7 @@ RUN ./gradlew dependencies --no-daemon
 # 4. 프로젝트 코드 복사 및 빌드 실행
 COPY .env .env
 COPY keys /app/resources/keys
+COPY keys /app/keys
 RUN ls -l /app/resources/keys
 COPY src src
 RUN ./gradlew build --no-daemon
