--- a/server/speechfy/src/main/resources/application.yml
+++ b/server/speechfy/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
@@ -17,7 +17,7 @@ spring:
         public: ${OAUTH2_JWT_PUBLIC_KEY_PATH}
       client:
         jwt:
-          access-token-time: 300
+          access-token-time: 180000
           refresh-token-time: 18000
         provider:
           kakao:
